--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -18,17 +18,19 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+</script>
+<!--End of Tawk.to Script-->
 
 <body>
 
@@ -40,8 +42,8 @@
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item" style="padding-right: 40px; padding-left: 40px;">
@@ -52,8 +54,8 @@
                     </li>
                     <li class="nav-item " style="padding-right: 40px; padding-left: 40px; border-right-color: #F25C5C;border-width: 3px; border-top-color: #315254;border-style: solid;border-bottom-color: #315254;border-left-color: #315254;">
                         <a class="nav-link " href="productos.html" id="texto-botones">
-              Productos
-            </a>
+                            Productos
+                        </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px;">
                         <a class="nav-link " href="planes.html" id="texto-botones">Planes</a>
@@ -64,10 +66,13 @@
         </div>
 
         <span class="login">
-      <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
-      <a href="contacto.html">        
-        <img src="Resources/Images/phone_50px.png" width="30px" /></a>
-    </span>
+            <a href="Panel-Administración.php">
+                <img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;">
+            </a>
+            <a href="contacto.html">        
+                <img src="Resources/Images/phone_50px.png" width="30px" />
+            </a>
+        </span>
     </nav>
 
     <!------------->
