--- a/Elliot/productos.html
+++ b/Elliot/productos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -22,17 +21,19 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+</script>
+<!--End of Tawk.to Script-->
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg" style="background: #315254; min-height: 120px">
@@ -75,7 +76,7 @@
         </div>
 
         <span class="login">
-            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px"
+            <a href="Panel-Administración.php"><img src="Resources/Images/user_50px.png" width="30px"
                     style="margin-right: 30px" /></a>
                     <a href="contacto.html">        
                         <img src="Resources/Images/phone_50px.png" width="30px" /></a>
@@ -100,9 +101,8 @@
                     <b>¿Qué ofrecemos?</b>
                 </p>
 
-                <p>Ofrecemos circuitos cerrados de televisión, que le permitirán estar al tanto de la seguridad de sus espacios 
-                    de forma remota y con actualizaciones constantes.<br><br>Nuestros sistemas permiten el monitoreo e integración de 
-                camaras, reles y sensores, lo que le permitira tener 3 formas diferentes de recolección de información para su monitoreo.</p>
+                <p>Ofrecemos circuitos cerrados de televisión, que le permitirán estar al tanto de la seguridad de sus espacios de forma remota y con actualizaciones constantes.<br><br>Nuestros sistemas permiten el monitoreo e integración de camaras, reles
+                    y sensores, lo que le permitira tener 3 formas diferentes de recolección de información para su monitoreo.</p>
             </div>
 
             <div class="col-6" style="display: flex; align-items: center;">
@@ -124,7 +124,8 @@
                     <img class="card-img-top" src="Resources/Images/pexels-atypeek-dgn-5966513.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CCTV</h5>
-                        <p class="card-text">Es una instalación de equipos conectados que generan un circuito de imágenes que solo puede ser visto por un grupo determinado de personas, estas se personalizan para adaptarse a las necesidades de cada cliente bien sean orientadas a la seguridad, vigilancia o mejora de servicio. </p>
+                        <p class="card-text">Es una instalación de equipos conectados que generan un circuito de imágenes que solo puede ser visto por un grupo determinado de personas, estas se personalizan para adaptarse a las necesidades de cada cliente bien sean orientadas
+                            a la seguridad, vigilancia o mejora de servicio. </p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
@@ -132,7 +133,8 @@
                     <img class="card-img-top" src="Resources/Images/619vFeWASgL._SL1500_.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
                     <div class="card-body">
                         <h5 class="card-title">Relé</h5>
-                        <p class="card-text">Es un dispositivo electromagnético. Funciona como un interruptor controlado por un circuito eléctrico en el que, por medio de una bobina y un electroimán, se acciona un juego de uno o varios contactos que permiten abrir o cerrar otros circuitos eléctricos independientes.</p>
+                        <p class="card-text">Es un dispositivo electromagnético. Funciona como un interruptor controlado por un circuito eléctrico en el que, por medio de una bobina y un electroimán, se acciona un juego de uno o varios contactos que permiten abrir o cerrar
+                            otros circuitos eléctricos independientes.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
@@ -140,7 +142,8 @@
                     <img class="card-img-top" src="Resources/Images/68641-15343708.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
                     <div class="card-body">
                         <h5 class="card-title">Sensor</h5>
-                        <p class="card-text">Es un dispositivo que detecta el cambio en el entorno y responde a alguna salida en el otro sistema. Un sensor convierte un fenómeno físico en un voltaje analógico medible (o, a veces, una señal digital) convertido en una pantalla legible para humanos o transmitida para lectura o procesamiento adicional.</p>
+                        <p class="card-text">Es un dispositivo que detecta el cambio en el entorno y responde a alguna salida en el otro sistema. Un sensor convierte un fenómeno físico en un voltaje analógico medible (o, a veces, una señal digital) convertido en una pantalla
+                            legible para humanos o transmitida para lectura o procesamiento adicional.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
