--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -21,17 +21,19 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+</script>
+<!--End of Tawk.to Script-->
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg" style="background: #315254; min-height: 120px">
@@ -74,10 +76,12 @@
         </div>
 
         <span class="login">
-            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px"
-                    style="margin-right: 30px" /></a>
-                    <a href="contacto.html">        
-                        <img src="Resources/Images/phone_50px.png" width="30px" /></a>
+            <a href="Panel-Administración.php">
+                <img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px" />
+            </a>
+            <a href="contacto.html">        
+                <img src="Resources/Images/phone_50px.png" width="30px" />
+            </a>
         </span>
     </nav>
 
@@ -101,11 +105,10 @@
             </div>
 
             <div class="col-8">
-                <p>Elliot es una iniciativa digital que ofrece a sus usuarios servicios de seguridad y monitoreo de actualización continua.<br><br>
-                    Somos un equipo que reconoce la importancia de la seguridad para las organizaciones y usuarios, que pretende dar un servicios
-                    de facil acceso y uso, con el proposito de que todo aquel que quiera invertir en seguridad, pueda hacerlo de forma facil y eficiente.
-                    <br> <br>Elliot es un sistema desde el cual usted podra administrar sus camaras, switches y sensores de forma remota y desde el cual podrá
-                    obtener datos en tiempo real de los mismos para poder estar siempre al tanto de la seguridad de sus espacios.</p>
+                <p>Elliot es una iniciativa digital que ofrece a sus usuarios servicios de seguridad y monitoreo de actualización continua.<br><br> Somos un equipo que reconoce la importancia de la seguridad para las organizaciones y usuarios, que pretende
+                    dar un servicios de facil acceso y uso, con el proposito de que todo aquel que quiera invertir en seguridad, pueda hacerlo de forma facil y eficiente.
+                    <br> <br>Elliot es un sistema desde el cual usted podra administrar sus camaras, switches y sensores de forma remota y desde el cual podrá obtener datos en tiempo real de los mismos para poder estar siempre al tanto de la seguridad
+                    de sus espacios.</p>
             </div>
         </div>
     </div>
@@ -131,7 +134,7 @@
                 </center>
             </div>
             <div class="col-4">
-                <center>                    
+                <center>
                     <p><b>Zamir Velasquez Beltran</b></p>
                     <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
                         <br><br>zvelasquezb@unal.edu.co
@@ -139,7 +142,7 @@
                 </center>
             </div>
             <div class="col-4">
-                <center>                    
+                <center>
                     <p><b>Andres David Ortega Lobo</b></p>
                     <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
                         <br><br>aortegal@unal.edu.co
@@ -147,7 +150,7 @@
                 </center>
             </div>
             <div class="col-4">
-                <center>                   
+                <center>
                     <p><b>Nicolas Dario Mejia Borda</b></p>
                     <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
                         <br><br>nmejiab@unal.edu.co
@@ -155,7 +158,7 @@
                 </center>
             </div>
             <div class="col-4">
-                <center>                    
+                <center>
                     <p><b>Ivonne Nathalia Uribe Lara</b></p>
                     <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
                         <br><br>iuribel@unal.edu.co
@@ -163,7 +166,7 @@
                 </center>
             </div>
             <div class="col-4">
-                <center>                    
+                <center>
                     <p><b>Hernando Rodriguez Gonzales</b></p>
                     <p>Profesor/ tutor de desarrollo.
                         <br><br>herrodriguezg@unal.edu.co
