--- a/Elliot/recuperarMiCuenta.html
+++ b/Elliot/recuperarMiCuenta.html
@@ -20,17 +20,19 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+</script>
+<!--End of Tawk.to Script-->
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg" style="background: #315254; min-height: 120px">
@@ -75,9 +77,12 @@
         </div>
 
         <span class="login">
-            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
+            <a href="Panel-Administración.php">
+                <img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/>
+            </a>
             <a href="contacto.html">        
-                <img src="Resources/Images/phone_50px.png" width="30px" /></a>
+                <img src="Resources/Images/phone_50px.png" width="30px" />
+            </a>
         </span>
     </nav>
 
