--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -78,9 +78,12 @@
         </div>
 
         <span class="login">
-            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
+            <a href="Panel-Administración.php">
+                <img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/>
+            </a>
             <a href="contacto.html">        
-                <img src="Resources/Images/phone_50px.png" width="30px" /></a>
+                <img src="Resources/Images/phone_50px.png" width="30px" />
+            </a>
         </span>
     </nav>
 
