--- a/Elliot/politica-privacidad.html
+++ b/Elliot/politica-privacidad.html
@@ -221,17 +221,32 @@
                             </p> 
                         </li>
                     </ul>
-                    Las cookies pueden ser cookies "persistentes" o "de sesión".
+                    <p>Las cookies pueden ser cookies "persistentes" o "de sesión".
                     Las cookies persistentes permanecen en su computadora
                     personal o dispositivo móvil cuando se desconecta, mientras
                     que las cookies de sesión se eliminan tan pronto como cierra
-                    su navegador web.<br>
-                    Utilizamos cookies de sesión y persistentes para los fines que se establecen a continuación:
-                    Cookies necesarias / esenciales
-                    Tipo: Cookies de sesión
-                    Administrado por: Nosotros
-                    Finalidad: Estos Cookies esenciales para proporcionarle los servicios disponibles a través del Sitio Web y para permitirle utilizar algunas de sus funciones. Ayudan a autenticar a los usuarios y evitar el uso fraudulento de las cuentas de usuario. Sin estas Cookies, los servicios que ha solicitado no se pueden proporcionar, y solo utilizamos estas Cookies para proporcionarle esos servicios.
-                    Política de Cookies / Aviso Aceptación Cookies
+                    su navegador web.</p>
+                    <p>Utilizamos cookies de sesión y persistentes para los fines
+                    que se establecen a continuación:</p>
+                    <ul>
+                        <li>
+                            <p>
+                                <i>Cookies necesarias / esenciales</i>
+                                Tipo: Cookies de sesión<br>
+                                Administrado por: Nosotros<br>
+                                Finalidad: Estos Cookies son esenciales para
+                                proporcionarle los servicios disponibles a
+                                través del Sitio Web y para permitirle utilizar
+                                algunas de sus funciones. Ayudan a autenticar a
+                                los usuarios y evitar el uso fraudulento de las
+                                cuentas de usuario. Sin estas Cookies, los
+                                servicios que ha solicitado no se pueden
+                                proporcionar, y solo utilizamos estas Cookies
+                                para proporcionarle esos servicios.
+                            </p>
+                        </li>
+                    </ul>
+                                        Política de Cookies / Aviso Aceptación Cookies
                     Tipo: Cookies persistentes
                     Administrado por: Nosotros
                     Finalidad: Estas Cookies identifican si los usuarios han aceptado el uso de cookies en el Sitio Web.
