--- a/Elliot/politica-privacidad.html
+++ b/Elliot/politica-privacidad.html
@@ -217,47 +217,235 @@
                     <ul>
                         <li>
                             <p>
-                                <i>Cookies o Cookies del navegador.</i> Una cookie es un pequeño archivo colocado en su dispositivo. Puede indicar a su navegador que rechace todas las cookies o que indique cuándo se envía una cookie. Sin embargo, si tu no aceptas Cookies, es posible que no pueda utilizar algunas partes de nuestro Servicio. A menos que haya ajustado la configuración de su navegador para que rechace las cookies, nuestro Servicio puede usar cookies.
+                                <i>Cookies o Cookies del navegador.</i>
+                                Una cookie es un pequeño archivo colocado en su
+                                dispositivo. Puede indicar a su navegador que
+                                rechace todas las cookies o que indique cuándo
+                                se envía una cookie. Sin embargo, si tu no
+                                aceptas Cookies, es posible que no pueda
+                                utilizar algunas partes de nuestro Servicio.
+                                A menos que haya ajustado la configuración de su
+                                navegador para que rechace las cookies, nuestro
+                                Servicio puede usar cookies.
                             </p> 
                         </li>
                     </ul>
-                    <p>Las cookies pueden ser cookies "persistentes" o "de sesión".
+                </p>
+                <p>
+                    Las cookies pueden ser cookies "persistentes" o "de sesión".
                     Las cookies persistentes permanecen en su computadora
                     personal o dispositivo móvil cuando se desconecta, mientras
                     que las cookies de sesión se eliminan tan pronto como cierra
-                    su navegador web.</p>
-                    <p>Utilizamos cookies de sesión y persistentes para los fines
-                    que se establecen a continuación:</p>
-                    <ul>
-                        <li>
-                            <p>
-                                <i>Cookies necesarias / esenciales</i>
-                                Tipo: Cookies de sesión<br>
-                                Administrado por: Nosotros<br>
-                                Finalidad: Estos Cookies son esenciales para
-                                proporcionarle los servicios disponibles a
-                                través del Sitio Web y para permitirle utilizar
-                                algunas de sus funciones. Ayudan a autenticar a
-                                los usuarios y evitar el uso fraudulento de las
-                                cuentas de usuario. Sin estas Cookies, los
-                                servicios que ha solicitado no se pueden
-                                proporcionar, y solo utilizamos estas Cookies
-                                para proporcionarle esos servicios.
-                            </p>
-                        </li>
-                    </ul>
-                                        Política de Cookies / Aviso Aceptación Cookies
-                    Tipo: Cookies persistentes
-                    Administrado por: Nosotros
-                    Finalidad: Estas Cookies identifican si los usuarios han aceptado el uso de cookies en el Sitio Web.
-                    Cookies de funcionalidad
-                    Tipo: Cookies persistentes
-                    Administrado por: Nosotros
-                    Propósito: Estas cookies nos permiten recordar las elecciones que realiza cuando utiliza el sitio web, como recordar sus datos de inicio de sesión o preferencia de idioma. El propósito de estas cookies es proporcionarle una experiencia más personal y evitar que tenga que volver a ingresar sus preferencias cada vez que utiliza el sitio web.
-                    Para obtener más información sobre las cookies que utilizamos y sus opciones con respecto a las cookies, visite nuestra Política de cookies o la sección de Cookies de nuestra Política de privacidad.
-                    </p>
+                    su navegador web.
+                </p>
+                <p>Utilizamos cookies de sesión y persistentes para los fines
+                que se establecen a continuación:</p>
+                <ul>
+                    <li>
+                        <p>
+                            <i>Cookies necesarias / esenciales</i>
+                            Tipo: Cookies de sesión<br>
+                            Administrado por: Nosotros<br>
+                            Finalidad: Estos Cookies son esenciales para
+                            proporcionarle los servicios disponibles a
+                            través del Sitio Web y para permitirle utilizar
+                            algunas de sus funciones. Ayudan a autenticar a
+                            los usuarios y evitar el uso fraudulento de las
+                            cuentas de usuario. Sin estas Cookies, los
+                            servicios que ha solicitado no se pueden
+                            proporcionar, y solo utilizamos estas Cookies
+                            para proporcionarle esos servicios.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <i>Política de Cookies / Aviso Aceptación 
+                                Cookies</i><br>
+                            Tipo: Cookies persistentes<br>
+                            Administrado por: Nosotros<br>
+                            Finalidad: Estas Cookies identifican si los
+                            usuarios han aceptado el uso de cookies en el
+                            Sitio Web.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <i>Cookies de funcionalidad</i>
+                            Tipo: Cookies persistentes<br>
+                            Administrado por: Nosotros<br>
+                            Propósito: Estas cookies nos permiten recordar
+                            las elecciones que realiza cuando utiliza el
+                            sitio web, como recordar sus datos de inicio
+                            de sesión o preferencia de idioma. El propósito
+                            de estas cookies es proporcionarle una
+                            experiencia más personal y evitar que tenga
+                            que volver a ingresar sus preferencias cada vez
+                            que utiliza el sitio web.
+                        </p>
+                    </li>
+                </ul>
+                <p>
+                    Para obtener más información sobre las cookies que
+                    utilizamos y sus opciones con respecto a las cookies, visite
+                    nuestra Política de cookies o la sección de Cookies de
+                    nuestra Política de privacidad.
+                </p>
+
                 <h2>Uso de sus datos personales</h2>
+                <p>
+                    La Compañía puede utilizar los Datos Personales para los
+                    siguientes propósitos:
+                </p>
+                <ul>
+                    <li>
+                        <p>
+                            <b>Para proporcionar y mantener nuestro Servicio</b>
+                            , incluido el monitoreo del uso de nuestro Servicio.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para administrar su cuenta:</b> para administrar
+                            su registro como usuario del Servicio. Los Datos
+                            Personales que Usted proporciona pueden darle acceso
+                            a diferentes funcionalidades del Servicio que están
+                            disponibles para Usted como usuario registrado.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para la ejecución de un contrato:</b> el
+                            desarrollo, cumplimiento y realización del contrato
+                            de compra de los productos, artículos o servicios
+                            que ha adquirido o de cualquier otro contrato con
+                            nosotros a través del Servicio.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para contactarlo:</b> Para contactarlo por correo
+                            electrónico, llamadas telefónicas, SMS u otras
+                            formas equivalentes de comunicación electrónica,
+                            como las notificaciones push de una aplicación móvil
+                            sobre actualizaciones o comunicaciones informativas
+                            relacionadas con las funcionalidades, productos o
+                            servicios contratados, incluidas las actualizaciones
+                            de seguridad, cuando sea necesario o aplicable para
+                            su implementación.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para gestionar sus solicitudes:</b> Para atender
+                            y gestionar sus solicitudes a nosotros.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para transferencias comerciales:</b> Podemos usar
+                            su información para evaluar o llevar a cabo una
+                            fusión, desinversión, reestructuración,
+                            reorganización, disolución u otra venta o
+                            comercialización de algunos o todos nuestros
+                            activos, ya sea como una empresa en marcha o como
+                            parte de una bancarrota, liquidación o procedimiento
+                            similar, en el que los Datos personales en nuestros
+                            sitios sobre nuestros usuarios del Servicio se
+                            encuentran entre los activos transferidos.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para otros fines:</b> Podemos utilizar Su
+                            formación para otros fines, como el análisis de
+                            datos, la identificación de tendencias de uso, la
+                            determinación de la efectividad de nuestras campañas
+                            promocionales y para evaluar y mejorar nuestro
+                            Servicio, productos, servicios, marketing y su
+                            experiencia.
+                        </p>
+                    </li>
+                </ul>
+                <p>
+                    Podemos compartir su información personal en las siguientes
+                    situaciones:
+                </p>
+                <ul>
+                    <li>
+                        <p>
+                            <b>Con Proveedores de Servicios: </b>Podemos
+                            compartir Su información personal con Proveedores de
+                            Servicios para monitorear y analizar el uso de
+                            nuestroServicio, para contactarlo.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Para transferencias comerciales: </b>Podemos
+                            compartir o transferir su información personal en
+                            relación con, o durante las negociaciones de,
+                            cualquier fusión, venta de activos de la Compañía,
+                            financiamiento o adquisición de todo o una parte de
+                            Nuestro negocio a otra compañía.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Con Afiliados: </b>Podemos compartir Su
+                            información con Nuestros afiliados, en cuyo caso
+                            requeriremos que esos afiliados cumplan con esta
+                            Política de Privacidad. Los afiliados incluyen
+                            nuestra empresa matriz y cualquier otra subsidiaria,
+                            socio de empresa conjunta u otras compañías que
+                            controlamos o que están bajo control común con
+                            nosotros.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Con socios comerciales: </b>Podemos compartir su
+                            información con nuestros socios comerciales para
+                            ofrecerle ciertos productos, servicios o
+                            promociones.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Con otros usuarios: </b>cuandocomparte
+                            información personal o interactúa de otra manera en
+                            las áreas públicas con otros usuarios, dicha
+                            información puede ser vista por todos los usuarios y
+                            puede ser distribuida públicamente fuera.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <b>Con su consentimiento: </b>Podemos divulgar su
+                            información personal para cualquier otro propósito
+                            con su consentimiento.
+                        </p>
+                    </li>
+                </ul>
                 <h2>Conservación de sus datos personales</h2>
+                <p>
+                    La Compañía conservará Sus Datos Personales solo durante el
+                    tiempo que sea necesario para los fines establecidos en esta
+                    Política de Privacidad. Conservaremos y utilizaremos sus
+                    datos personales en la medida necesaria para cumplir con
+                    nuestras obligaciones legales (por ejemplo, si estamos
+                    obligados a conservar sus datos para cumplir con las leyes
+                    aplicables), resolver disputas y hacer cumplir nuestros
+                    acuerdos y políticas legales.
+                </p>
+                <p>
+                    La Compañía también conservará los Datos de Uso para fines
+                    de análisis interno. Los Datos de uso generalmente se
+                    conservan durante un período de tiempo más corto, excepto
+                    cuando estos datos se utilizan para fortalecer la seguridad
+                    o para mejorar la funcionalidad de Nuestro Servicio, o
+                    estamos legalmente obligados a retener estos datos durante
+                    períodos de tiempo más largos.
+                </p>
                 <h2>Transferencia de sus datos personales</h2>
                 <h2>Divulgación de sus datos personales</h2>
                 <h2>Seguridad de sus datos personales</h2>
@@ -282,6 +470,7 @@
                         <li><a href="quienes-somos.html" class=" ">¿Quiénes Somos?</a><br /></li>
                         <li><a href="productos.html" class=" ">Productos</a><br /></li>
                         <li><a href="planes.html" class=" ">Planes</a><br /></li>
+                        <li><a href="politica-privacidad.html" class=" ">Nuestra política de privacidad</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
