Políticas de privacidad y manejo de cookies

--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -193,6 +193,7 @@
                         <li><a href="quienes-somos.html" class=" ">¿Quiénes Somos?</a><br /></li>
                         <li><a href="productos.html" class=" ">Productos</a><br /></li>
                         <li><a href="planes.html" class=" ">Planes</a><br /></li>
+                        <li><a href="politica-privacidad.html" class=" ">Nuestra política de privacidad</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
