--- a/Elliot/politica-privacidad.html
+++ b/Elliot/politica-privacidad.html
@@ -447,8 +447,223 @@
                     períodos de tiempo más largos.
                 </p>
                 <h2>Transferencia de sus datos personales</h2>
+                <p>
+                    Su información, incluidos los Datos personales, se procesa
+                    en las oficinas operativas de la Compañía y en cualquier
+                    otro lugar donde se encuentren las partes involucradas en el
+                    procesamiento. Significa que esta información puede
+                    transferirse y mantenerse en computadoras ubicadas fuera de
+                    su estado, provincia, país u otra jurisdicción gubernamental
+                    donde las leyes de protección de datos pueden diferir de las
+                    de su jurisdicción.
+                </p>
+                <p>
+                    Su consentimiento a esta Política de privacidad seguido de
+                    su envío de dicha información representa su acuerdo con esa
+                    transferencia.
+                </p>
+                <p>
+                    La Compañía tomará todas las medidas necesarias para
+                    garantizar que sus datos se traten de forma segura y de
+                    acuerdo con esta Política de privacidad y no se realizará
+                    ninguna transferencia de sus datos personales a una
+                    organización o país a menos que existan controles adecuados,
+                    incluida la seguridad de sus datos y otra información
+                    personal.
+                </p>
                 <h2>Divulgación de sus datos personales</h2>
+                <p>
+                    <b>Transacciones comerciales</b>
+                </p>
+                <p>
+                    Si la Compañía está involucrada en una fusión, adquisición o
+                    venta de activos, Sus Datos Personales pueden ser
+                    transferidos. Le notificaremos antes de que sus datos
+                    personales se transfieran y estén sujetos a una Política de
+                    privacidad diferente.
+                </p>
+                <p>
+                    <b>Aplicación de la ley</b>
+                </p>
+                <p>
+                    Bajo ciertas circunstancias, la Compañía puede estar
+                    obligada a divulgar Sus Datos Personales si así lo requiere
+                    la ley o en respuesta a solicitudes válidas de las
+                    autoridades públicas (por ejemplo, un tribunal o una agencia
+                    gubernamental).
+                </p>
+                <p>
+                    <b>Otros requisitos legales</b>
+                </p>
+                <p>
+                    La Compañía puede divulgar Sus Datos Personales en la
+                    creencia de buena fe de que dicha acción es necesaria para:
+                </p>
+                <ul>
+                    <li>
+                        <p>
+                            Cumplir con una obligación legal
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Proteger y defender los derechos o la propiedad de
+                            la Compañía
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Prevenir o investigar posibles irregularidades en
+                            relación con el Servicio
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Proteger la seguridad personal de los Usuarios del
+                            Servicio o del público
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Protección contra la responsabilidad legal
+                        </p>
+                    </li>
+                </ul>
+
                 <h2>Seguridad de sus datos personales</h2>
+                <p>
+                    La seguridad de sus datos personales es importante para
+                    nosotros, pero recuerde que ningún método de transmisión a
+                    través de Internet o método de almacenamiento electrónico es
+                    100% seguro. Si bien nos esforzamos por utilizar medios
+                    comercialmente aceptables para proteger sus datos
+                    personales, no podemos garantizar su seguridad absoluta.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row" style="display: flex; align-items: flex-start; margin-top: 10px; margin-bottom: 10px;">
+            <div class="col-12">
+                <hr style="width:30%; height: 3px; background-color:#315254;">
+                <h1>
+                    Privacidad de los niños
+                </h1>
+            </div>
+
+            <div class="col-12">
+                <p>
+                    Nuestro Servicio no se dirige a ninguna persona menor de 18
+                    años. No recopilamos a sabiendas información de
+                    identificación personal de ninguna persona menor de 18 años.
+                    Si usted es un padre o tutor y sabe que su hijo nos ha
+                    proporcionado datos personales, póngase en contacto con
+                    nosotros. Si nos damos cuenta de que hemos recopilado Datos
+                    personales de cualquier persona menor de 18 años sin la
+                    verificación del consentimiento de los padres, tomamos
+                    medidas para eliminar esa información de Nuestros
+                    servidores.
+                </p>
+                <p>
+                    Si necesitamos confiar en el consentimiento como base legal
+                    para procesar su información y su país requiere el
+                    consentimiento de un padre, podemos requerir el
+                    consentimiento de sus padres antes de recopilar y usar esa
+                    información.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row" style="display: flex; align-items: flex-start; margin-top: 10px; margin-bottom: 10px;">
+            <div class="col-12">
+                <hr style="width:30%; height: 3px; background-color:#315254;">
+                <h1>
+                    Enlaces a otros sitios web
+                </h1>
+            </div>
+
+            <div class="col-12">
+                <p>
+                    Nuestro Servicio puede contener enlaces a otros sitios web
+                    que no son operados por Nosotros. Si hace clic en un enlace
+                    de terceros, se le dirigirá al sitio de ese tercero. Le
+                    recomendamos encarecidamente que revise la Política de
+                    privacidad de cada sitio que visite.
+                </p>
+                <p>
+                    No tenemos control ni asumimos ninguna responsabilidad por
+                    el contenido, las políticas de privacidad o las prácticasde
+                    los sitios o servicios de terceros.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row" style="display: flex; align-items: flex-start; margin-top: 10px; margin-bottom: 10px;">
+            <div class="col-12">
+                <hr style="width:30%; height: 3px; background-color:#315254;">
+                <h1>
+                    Cambios a esta Política de Privacidad
+                </h1>
+            </div>
+
+            <div class="col-12">
+                <p>
+                    Podemos actualizar nuestra Política de privacidad de vez en
+                    cuando. Le notificaremos de cualquier cambio mediante la
+                    publicación de la nueva Política de privacidad en esta
+                    página.
+                </p>
+                <p>
+                    Le informaremos por correo electrónico y / o un aviso
+                    destacado en Nuestro Servicio, antes de que el cambio entre
+                    en vigencia y actualizaremos la fecha de "Última
+                    actualización" en la parte superior de esta Política de
+                    privacidad.
+                </p>
+                <p>
+                    Le recomendamos que revise esta Política de privacidad
+                    periódicamente para cualquier cambio. Los cambios a esta
+                    Política de Privacidad son efectivos cuando se publican en
+                    esta página.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row" style="display: flex; align-items: flex-start; margin-top: 10px; margin-bottom: 10px;">
+            <div class="col-12">
+                <hr style="width:30%; height: 3px; background-color:#315254;">
+                <h1>
+                    Contáctenos
+                </h1>
+            </div>
+
+            <div class="col-12">
+                <p>
+                    Si tiene alguna pregunta sobre esta Política de privacidad,
+                    puede ponerse en contacto con nosotros:
+                </p>
+                <ul>
+                    <li>
+                        <p>
+                            Al visitar esta página en nuestro sitio web:
+                            <a href="contacto.html">
+                                www.eliottech.com.co/contacto
+                            </a>                            
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Por correo: noresponderEliot@gmail.com
+                        </p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
