Políticas de privacidad y manejo de cookies en sign up

--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -137,7 +137,11 @@
 
 
                         <div class="d-flex justify-content-between align-items-center">
-                            <p>Al hacer clic en Registrarte, aceptas las Condiciones, la Política de datos y la Política de cookies. Es posible que te enviemos notificaciones por correo.</p>
+                            <p>Al hacer clic en Registrarte, aceptas 
+                                <a href="politica-privacidad.html">
+                                    las Condiciones, la Política de datos y la Política de cookies.
+                                </a>
+                                Es posible que te enviemos notificaciones por correo.</p>
                         </div>
 
                         <div class="text-center text-lg-start mt-4 pt-2">
