--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -123,53 +123,73 @@
         <hr style="width:20%; height: 3px; background-color:#000; margin-top: 50px; margin-bottom: 50px;">
     </center>
 
-    <div class="container" style="margin-top:50px; margin-bottom:80px; ">
-        <div class="row">
+    <div class="container my-2">
+        <div class="row my-5">
             <div class="col-4">
                 <center>
                     <p><b>Cristian Camilo Vargas Morales</b></p>
-                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
-                        <br><br>crvargasm@unal.edu.co
+                    <p>Estudiante de Ingeniería de Sistemas y Computación de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:crvargasm@unal.edu.co">
+                            crvargasm@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <p><b>Zamir Velasquez Beltran</b></p>
-                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
-                        <br><br>zvelasquezb@unal.edu.co
+                    <p>Estudiante de Ingeniería de Sistemas y Computación de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:zvelasquezb@unal.edu.co">
+                            zvelasquezb@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <p><b>Andres David Ortega Lobo</b></p>
-                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
-                        <br><br>aortegal@unal.edu.co
+                    <p>Estudiante de Ingeniería de Sistemas y Computación de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:aortegal@unal.edu.co">
+                            aortegal@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
+        </div>
+        <div class="row my-5">
             <div class="col-4">
                 <center>
                     <p><b>Nicolas Dario Mejia Borda</b></p>
-                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
-                        <br><br>nmejiab@unal.edu.co
+                    <p>Estudiante de Ingeniería de Sistemas y Computación de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:nmejiab@unal.edu.co">
+                            nmejiab@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <p><b>Ivonne Nathalia Uribe Lara</b></p>
-                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
-                        <br><br>iuribel@unal.edu.co
+                    <p>Estudiante de Ingeniería de Sistemas y Computación de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:iuribel@unal.edu.co">
+                            iuribel@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <p><b>Hernando Rodriguez Gonzales</b></p>
-                    <p>Profesor/ tutor de desarrollo.
-                        <br><br>herrodriguezg@unal.edu.co
+                    <p>Docenteñ del Departamento de Ingeniería de Sistemas e Industrial de la Universidad Nacional de Colombia.
+                        <br><br>
+                        <a href="mailto:herrodriguezg@unal.edu.co">
+                            herrodriguezg@unal.edu.co
+                        </a>
                     </p>
                 </center>
             </div>
