--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -133,7 +133,7 @@
             <div class="col-1" style="background-color: #FEEFE8; border-right-color: rgba(0, 0, 0, 0);border-width: 3px; border-top-color: #000;border-style: solid;border-bottom-color: #000;border-left-color: #fff; margin-right: -11px;">
             </div>
             <div class="col-4">
-                <img class="img-border" src="Resources/Images/historia.png" width="100%">
+                <img class="img-border" src="Resources/Images/Computador.jpg" width="100%">
             </div>
             <div class="col-7" style="border-right-color: #fff;border-width: 3px; border-top-color: rgba(0, 0, 0, 0);border-style: solid;border-bottom-color: rgba(0, 0, 0, 0);border-left-color: rgba(255, 255, 255, 0);">
 
