--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -223,23 +223,26 @@
                 <center>
                     <img src="Resources/Images/security_lock_100px.png" width="15%">
                     <p><b>SEGURIDAD</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                    <p>
+                        La comunicación entre nuestras interfaces se hace mediante un sistema de contraseñas generadas con SHA256, lo que garantiza una alta seguridad en el control y lectura de tus dispositivos.
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <img src="Resources/Images/centralized_network_100px.png" width="15%">
-                    <p><b>SEGURIDAD</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                    <p><b>COMODIDAD/b></p>
+                    <p>
+                        Con Eliot podrás revisar tus cámaras, controlar tus switches y monitorear los sensores de tu casa desde cualquier lugar con internet.
                     </p>
                 </center>
             </div>
             <div class="col-4">
                 <center>
                     <img src="Resources/Images/easy_100px.png" width="15%">
-                    <p><b>SEGURIDAD</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                    <p><b>EFECTIVIDAD</b></p>
+                    <p>
+                        La comodidad que te ofrecemos permite que tu vida laboral, familiar y personal sea eficiente y eficaz, con Eliot tu vida será efectva.
                     </p>
                 </center>
             </div>
