--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -231,7 +231,7 @@
             <div class="col-4">
                 <center>
                     <img src="Resources/Images/centralized_network_100px.png" width="15%">
-                    <p><b>COMODIDAD/b></p>
+                    <p><b>COMODIDAD</b></p>
                     <p>
                         Con Eliot podrás revisar tus cámaras, controlar tus switches y monitorear los sensores de tu casa desde cualquier lugar con internet.
                     </p>
