--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -91,9 +91,11 @@
       </p>
       <img src="Resources/Images/Grupo 36.png" width="20%"
         style="    float: right; margin-right: 200px; margin-top: -210px;">
-      <button type="button" class="btn btn-default" aria-label="Right Align">
+        <a href = "planes.html">
+        <button type="button" class="btn btn-default" aria-label="Right Align">
         <span class="" aria-hidden="true"></span> LEER MÁS
         </button>
+        </a>
         </span>
     </div>
     <!------------->
@@ -149,12 +151,12 @@
             decidido crear<br> <b>Elliot Tech en 2022</b>, una suite de soluciones
             para usuarios de sistemas<br> de monitoreo y seguridad.<br>
           </p>
-
+          <a href="quienes-somos.html">
           <button type="button" class="btn btn-default" aria-label="Right Align" style=" margin-left: 40px;">
             <span class="" aria-hidden="true"></span> LEER MÁS
                 </button>
                 </span>
-
+            </a>
             </div>
         </div>
     </div>
@@ -248,10 +250,12 @@
             </div>
 
             <center>
-                <button type="button" class="btn btn-default" aria-label="Right Align" style=" margin-top: 50px; margin-bottom: 50px; max-width: 250px">
-            <span class="" aria-hidden="true"></span>
-            LEER MÁS
-          </button>
+                <a href = "productos.html">
+                    <button type="button" class="btn btn-default" aria-label="Right Align" style=" margin-top: 50px; margin-bottom: 50px; max-width: 250px">
+                        <span class="" aria-hidden="true"></span>
+                        LEER MÁS
+                    </button>
+                </a>
             </center>
         </div>
     </div>
